[tool.poetry]
name = "stripe-checkout"
version = "0.1.0"
description = ""
authors = ["Oleg Gera <hi@oleggera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
stripe = "^7.11.0"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
